[package]
name = "serde-odbc"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "LGPL-3.0"
repository = "https://github.com/adamreichold/serde-odbc"
description = "Bind serializable Rust data to ODBC statements"
categories = ["database"]

[badges]
travis-ci = { repository = "adamreichold/serde-odbc" }

[dependencies]
odbc-sys = "0.6"
serde = "1.0"
serde_derive = "1.0"
typenum = "1.9"
generic-array = "0.12"

[dev-dependencies]
futures = "0.1"
hyper = "0.11"
serde_json = "1.0"
regex = "1.0"
