[package]
edition = "2018"
name = "serde-odbc"
version = "0.1.2"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "LGPL-3.0"
repository = "https://github.com/adamreichold/serde-odbc"
description = "Bind serializable Rust data to ODBC statements"
readme = "README.md"
keywords = ["odbc"]
categories = ["database"]

[badges]
travis-ci = { repository = "adamreichold/serde-odbc" }

[dependencies]
odbc-sys = "0.7"
serde = "1.0"
serde_derive = "1.0"
typenum = "1.9"
generic-array = "0.12"

[dev-dependencies]
actix-web = "0.7"
