[package]
edition = "2018"
name = "serde-odbc"
version = "0.3.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "LGPL-3.0"
repository = "https://github.com/adamreichold/serde-odbc"
description = "Bind serializable Rust data to ODBC statements"
readme = "README.md"
keywords = ["odbc"]
categories = ["database"]

[badges]
travis-ci = { repository = "adamreichold/serde-odbc" }

[dependencies]
odbc-sys = "0.8"
serde = { version = "1.0", features = ["derive"] }
generic-array = "0.13"

[dev-dependencies]
actix-web = "1.0"
